<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/fmad1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_id_home_top"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fmad1">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_cover"
            android:layout_width="@dimen/dimen_large_box"
            android:layout_height="@dimen/dimen_large_box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:fadeDuration="500"
            android:background="@drawable/ic_media_art_box"
            fresco:placeholderImage="@drawable/ic_product_logo"
            fresco:roundedCornerRadius="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:id="@+id/layoutInfoPane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/viewOnline"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_nowplaying"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNowPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_buffer"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_by"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_buffer"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewOffline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtOffline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_offline"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/txt_checkfacebook"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutInfoPane">

            <ImageButton
                android:id="@+id/btn_theme"
                android:layout_width="@dimen/dimen_small_button"
                android:layout_height="@dimen/dimen_small_button"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_invert_colors" />

            <ImageButton
                android:id="@+id/btn_score"
                android:layout_width="@dimen/dimen_small_button"
                android:layout_height="@dimen/dimen_small_button"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_score" />

            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="@dimen/dimen_large_button"
                android:layout_height="@dimen/dimen_large_button"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_play_circle" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="@dimen/dimen_small_button"
                android:layout_height="@dimen/dimen_small_button"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/btn_info"
                android:layout_width="@dimen/dimen_small_button"
                android:layout_height="@dimen/dimen_small_button"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_info" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_poweredby"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>